# NX-Pctl-Manager

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  run.sh
.github/workflows/: build.yml
resources/i18n/en-US/: nx_pctl.json
resources/xml/activity/: init_error.xml  main.xml  play_timer.xml  play_timer_perday.xml
resources/xml/view/: pt_state_header.xml  status_panel.xml
source/: app.cpp  app.hpp  main.c  main.cpp  menu.c  menu.h  pctl_ops.c  pctl_ops.h
source/action/: pt_flow.cpp  pt_flow.hpp
source/activity/: init_error_activity.cpp  init_error_activity.hpp  main_activity.cpp  main_activity.hpp  play_timer_activity.cpp  play_timer_activity.hpp  play_timer_perday_activity.cpp  play_timer_perday_activity.hpp
source/util/: numpad.cpp  numpad.hpp  pctl_ops_c.hpp
source/view/: pt_state_header.cpp  pt_state_header.hpp  status_panel.cpp  status_panel.hpp
